--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -43,7 +43,7 @@
     "joi": "17.13.3",
     "mysql2": "3.14.2",
     "pg": "8.16.3",
-    "ratings-features": "workspace:*",
+    "@repo/features": "workspace:*",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "0.3.25"
