--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
+  "name": "ratings-v2",
+  "private": true,
+  "dependencies": {
+    "jest-cucumber": "^4.5.0",
+    "zod": "4.0.5"
+  },
   "devDependencies": {
     "@tiagojacinto/eslint-config": "0.5.13",
     "@tiagojacinto/prettier-config": "0.1.1",
     "@tiagojacinto/typescript-config": "0.1.0",
     "@primitivestack/core": "0.0.16",
+    "turbo": "^2.5.5",
     "@types/node": "^22.16.4",
     "eslint": "^9.31.0",
     "is-ci": "^4.1.0",
@@ -15,12 +22,15 @@
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1"
   },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
-  "dependencies": {
-    "jest-cucumber": "^4.5.0",
-    "zod": "4.0.5"
+  "scripts": {
+    "build": "turbo run build",
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "check-types": "turbo run check-types"
   },
+  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
   "engines": {
-    "node": ">=14"
+    "node": ">=18"
   }
 }
