--- a/package.json
+++ b/package.json
@@ -1,36 +1,56 @@
 {
-  "name": "ratings-v2",
-  "private": true,
-  "dependencies": {
-    "jest-cucumber": "^4.5.0",
-    "zod": "4.0.5"
-  },
-  "devDependencies": {
-    "@tiagojacinto/eslint-config": "0.5.13",
-    "@tiagojacinto/prettier-config": "0.1.1",
-    "@tiagojacinto/typescript-config": "0.1.0",
-    "@primitivestack/core": "0.0.16",
-    "turbo": "^2.5.5",
-    "@types/node": "^22.16.4",
-    "eslint": "^9.31.0",
-    "is-ci": "^4.1.0",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "tsx": "4.20.3",
-    "type-fest": "4.41.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1"
-  },
-  "scripts": {
-    "build": "turbo run build",
-    "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
-  },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
-  "engines": {
-    "node": ">=18"
-  }
+	"name": "ratings-v2",
+	"private": true,
+	"dependencies": {
+		"zod": "4.0.5"
+	},
+	"devDependencies": {
+		"jest-cucumber": "^4.5.0",
+		"@biomejs/biome": "2.1.2",
+		"@primitivestack/core": "0.0.16",
+		"@tiagojacinto/eslint-config": "0.5.16",
+		"@tiagojacinto/prettier-config": "0.1.1",
+		"@tiagojacinto/typescript-config": "0.1.1",
+		"@types/node": "^22.16.4",
+		"eslint": "^9.31.0",
+		"is-ci": "^4.1.0",
+		"prettier": "^3.6.2",
+		"rimraf": "^6.0.1",
+		"ts-node": "^10.9.2",
+		"tsx": "4.20.3",
+		"turbo": "^2.5.5",
+		"type-fest": "4.41.0",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.35.1"
+	},
+	"scripts": {
+		"build": "turbo run build",
+		"dev": "turbo run dev",
+
+		"types:check": "turbo run types:check",
+
+		"lint:check": "turbo run lint:check",
+		"lint:fix": "turbo run lint:fix",
+
+		"format:check": "biome format . \"**/*.{ts,tsx,md}\"",
+		"format:fix": "biome format --fix \"**/*.{ts,tsx,md}\"",
+
+		"quality:check": "turbo run quality:check",
+		"quality:fix": "turbo run quality:fix",
+
+		"test:unit": "turbo run test:unit",
+		"test:unit:features": "turbo run test:unit:features",
+		"test:e2e": "turbo run test:e2e",
+		"test:e2e:features": "turbo run test:e2e:features",
+
+		"git-hooks:install": "pre-commit install",
+		"pre-commit:run": "pre-commit install && pre-commit run --all-files"
+	},
+	"packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac",
+	"engines": {
+		"node": ">=18"
+	},
+	"config": {
+		"cz-gitmoji": {}
+	}
 }
