chore: configure uv with pre-commit python packages

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,8 +9,8 @@ fail_fast: true
 # default_language_version:
   # python: python3.12
 default_install_hook_types:
-  - pre-commit
-  - commit-msg
+-   pre-commit
+-   commit-msg
 repos:
   #
   # Documentation Here:
@@ -22,53 +22,53 @@ repos:
 
   # ----------------------------- 🔒 Security Tools ---------------------------- #
 
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.22.1
+-   repo: https://github.com/gitleaks/gitleaks
+    rev: v8.27.2
     hooks:
-      - id: gitleaks
+    -   id: gitleaks
         name: "🔒 security · Detect hardcoded secrets"
 
   # --------------------------- 🔍 Code Quality Tools -------------------------- #
 
   ### Javascript & Web Tools ###
-  - repo: https://github.com/biomejs/pre-commit
+-   repo: https://github.com/biomejs/pre-commit
     rev: v2.1.2
     hooks:
-    - id: biome-check
-      additional_dependencies:
-        - '@biomejs/biome@2.1.2'
+    -   id: biome-check
+        additional_dependencies:
+        -   '@biomejs/biome@2.1.2'
 
   ### Data & Config Validation ###
-  - repo: https://github.com/python-jsonschema/check-jsonschema
-    rev: 0.31.0
+-   repo: https://github.com/python-jsonschema/check-jsonschema
+    rev: 0.33.2
     hooks:
-      - id: check-github-workflows
+    -   id: check-github-workflows
         name: "🐙 github-actions · Validate gh workflow files"
         args: ["--verbose"]
-      - id: check-taskfile
+    -   id: check-taskfile
         name: "✅ taskfile · Validate Task configuration"
 
   #STRICT
-  - repo: https://github.com/markdownlint/markdownlint
-    rev: v0.12.0
+-   repo: https://github.com/markdownlint/markdownlint
+    rev: v0.13.0
     hooks:
-      - id: markdownlint
+    -   id: markdownlint
         name: "📝 markdown · Lint markdown"
 
   ## Shell ###
 
   #STRICT
-  - repo: https://github.com/shellcheck-py/shellcheck-py
+-   repo: https://github.com/shellcheck-py/shellcheck-py
     rev: v0.10.0.1
     hooks:
-      - id: shellcheck
+    -   id: shellcheck
         name: "🐚 shell · Lint shell scripts"
 
   #STRICT
-  - repo: https://github.com/openstack/bashate
+-   repo: https://github.com/openstack/bashate
     rev: 2.1.1
     hooks:
-      - id: bashate
+    -   id: bashate
         name: "🐚 shell · Check shell script code style"
 
   ### Makefile ###
@@ -86,10 +86,10 @@ repos:
 
   ### SQL ###
 
-  - repo: https://github.com/sqlfluff/sqlfluff
-    rev: 3.3.0
+-   repo: https://github.com/sqlfluff/sqlfluff
+    rev: 3.4.2
     hooks:
-      - id: sqlfluff-fix
+    -   id: sqlfluff-fix
         name: "📊 SQL · Attempts to fix rule violations."
       # STRICT
       # - id: sqlfluff-lint
@@ -106,49 +106,49 @@ repos:
 
   # ----------------------------- ⚡️ uv Build Tools ---------------------------- #
   # This helps ensure cross-compatibility with people who don't wish to use uv
-  # - repo: https://github.com/astral-sh/uv-pre-commit
-  #   # uv version.
-  #   rev: 0.5.27
-  #   hooks:
-  #     # STRICT -- This (kind of) enforces use of uv
-  #     - id: uv-sync
-  #       name: "⚡️ uv · Sync dependencies with uv"
-  #     # Update the uv lockfile
-  #     - id: uv-lock
-  #       name: "⚡️ uv · Update dependency lockfile"
-  #     # Export to txt
-  #     - id: uv-export
-  #       name: "⚡️ uv · Export dependencies to requirements.txt"
+-   repo: https://github.com/astral-sh/uv-pre-commit
+    # uv version.
+    rev: 0.5.27
+    hooks:
+      # STRICT -- This (kind of) enforces use of uv
+      - id: uv-sync
+        name: "⚡️ uv · Sync dependencies with uv"
+      # Update the uv lockfile
+      - id: uv-lock
+        name: "⚡️ uv · Update dependency lockfile"
+      # Export to txt
+      # - id: uv-export
+      #   name: "⚡️ uv · Export dependencies to requirements.txt"
 
   # ---------------------------- 📁 Filesystem Tools --------------------------- #
 
-  - repo: https://github.com/pre-commit/pre-commit-hooks
+-   repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v5.0.0
     hooks:
       # Filesystem Checks
-      - id: check-executables-have-shebangs
+    -   id: check-executables-have-shebangs
         name: "📁 filesystem/⚙️ exec · Verify shebang presence"
         # Exclude FastAPI directories for now
         exclude: |
           (?x)^(
             .*\{\{.*\}\}.*|
           )$
-      - id: check-shebang-scripts-are-executable
+    -   id: check-shebang-scripts-are-executable
         name: "📁 filesystem/⚙️ exec · Verify script permissions"
-      - id: check-case-conflict
+    -   id: check-case-conflict
         name: "📁 filesystem/📝 names · Check case sensitivity"
-      - id: check-illegal-windows-names
+    -   id: check-illegal-windows-names
         name: "📁 filesystem/📝 names · Validate Windows filenames"
-      - id: check-symlinks
+    -   id: check-symlinks
         name: "📁 filesystem/🔗 symlink · Check symlink validity"
-      - id: destroyed-symlinks
+    -   id: destroyed-symlinks
         name: "📁 filesystem/🔗 symlink · Detect broken symlinks"
       # ------------------------------- 🌳 Git Tools ------------------------------- #
-      - id: check-merge-conflict
+    -   id: check-merge-conflict
         name: "🌳 git · Detect conflict markers"
-      - id: forbid-new-submodules
+    -   id: forbid-new-submodules
         name: "🌳 git · Prevent submodule creation"
-      - id: check-added-large-files
+    -   id: check-added-large-files
         name: "🌳 git · Block large file commits"
         args: ["--maxkb=5000"]
       # - id: no-commit-to-branch
@@ -163,10 +163,10 @@ repos:
   # --------------------------- ✍️ Git Commit Quality -------------------------- #
 
   ### Commit Message Standards ###
-  - repo: https://github.com/commitizen-tools/commitizen
-    rev: v4.1.0
+-   repo: https://github.com/commitizen-tools/commitizen
+    rev: v4.8.3
     hooks:
-      - id: commitizen
+    -   id: commitizen
         name: "🌳 git · Validate commit message"
         stages: [commit-msg]
         additional_dependencies: [cz-conventional-gitmoji]
@@ -175,7 +175,7 @@ repos:
   #                             Local                                            #
   # ---------------------------------------------------------------------------- #
 
-  - repo: local
+-   repo: local
     hooks:
       # - id: fix-quality
       #   name: "🟦 typescript · Fix Quality"
@@ -185,24 +185,24 @@ repos:
       #   pass_filenames: false
       #   always_run: true
 
-      - id: typescript
+    -   id: typescript
         name: "🟦 typescript · Check types"
         entry: pnpm run types:check
         language: system
         # types: []
         pass_filenames: false
         always_run: true
-    
-      - id: dprint
+
+    -   id: dprint
         name: "🌎 global · Format with dprint"
         entry: dprint fmt --staged
         language: system
         # types: []
         pass_filenames: false
         always_run: true
-      
+
       # STRICT
-      - id: unit-test
+    -   id: unit-test
         name: 🧪 test · Run tests
         entry: pnpm run test:unit -- --testTimeout 3000
         language: system
@@ -211,4 +211,4 @@ repos:
         always_run: true
 
 # Notes
-# I can use ensemble hooks when maintaining too many hooks (Megalinter, Superlinter, qlty) 
+# I can use ensemble hooks when maintaining too many hooks (Megalinter, Superlinter, qlty)
