--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,8 +35,9 @@ repos:
     rev: v2.1.2
     hooks:
     -   id: biome-check
-        additional_dependencies:
-        -   '@biomejs/biome@2.1.2'
+        args: ["--fix", "--unsafe"]
+        additional_dependencies: ["@biomejs/biome@2.1.2"]
+        
 
   ### Data & Config Validation ###
 -   repo: https://github.com/python-jsonschema/check-jsonschema
