--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
     rev: v2.1.2
     hooks:
     -   id: biome-check
-        args: ["--fix", "--unsafe"]
+        args: ["--unsafe"]
         additional_dependencies: ["@biomejs/biome@2.1.2"]
         
 
