--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -18,10 +18,10 @@
 		"types:check": "tsc --noEmit",
 
 		"lint:check": "biome lint \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\"",
-		"lint:fix": "biome lint --fix --unsafe \"{src,apps,libs,test}/**/*.ts\" && eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
+		"lint:fix": "biome lint --write --unsafe \"{src,apps,libs,test}/**/*.ts\" && eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
 
 		"quality:check": "biome check \"{src,apps,libs,test}/**/*.ts\" && eslint \"{src,apps,libs,test}/**/*.ts\"",
-		"quality:fix": "biome check --fix --unsafe \"{src,apps,libs,test}/**/*.ts\" && eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
+		"quality:fix": "biome check --write --unsafe \"{src,apps,libs,test}/**/*.ts\" && eslint --fix \"{src,apps,libs,test}/**/*.ts\"",
 
 		"test": "jest",
 		"test:watch": "jest --watch",
