--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 		"zod": "4.0.5"
 	},
 	"devDependencies": {
-		"jest-cucumber": "^4.5.0",
 		"@biomejs/biome": "2.1.2",
 		"@primitivestack/core": "0.0.16",
 		"@tiagojacinto/eslint-config": "0.5.16",
@@ -14,7 +13,7 @@
 		"@types/node": "^22.16.4",
 		"eslint": "^9.31.0",
 		"is-ci": "^4.1.0",
-		"prettier": "^3.6.2",
+		"jest-cucumber": "^4.5.0",
 		"rimraf": "^6.0.1",
 		"ts-node": "^10.9.2",
 		"tsx": "4.20.3",
@@ -26,23 +25,19 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
-
 		"types:check": "turbo run types:check",
-
-		"lint:check": "turbo run lint:check",
-		"lint:fix": "turbo run lint:fix",
-
 		"format:check": "biome format . \"**/*.{ts,tsx,md}\"",
 		"format:fix": "biome format --fix \"**/*.{ts,tsx,md}\"",
-
+		"lint:check": "turbo run lint:check",
+		"lint:fix": "turbo run lint:fix",
+		"lint:fix:eslint": "turbo run lint:fix:eslint",
 		"quality:check": "turbo run quality:check",
 		"quality:fix": "turbo run quality:fix",
-
+		"quality:fix:unsafe": "turbo run quality:fix -- --unsafe",
 		"test:unit": "turbo run test:unit",
 		"test:unit:features": "turbo run test:unit:features",
 		"test:e2e": "turbo run test:e2e",
 		"test:e2e:features": "turbo run test:e2e:features",
-
 		"git-hooks:install": "pre-commit install",
 		"pre-commit:run": "pre-commit install && pre-commit run --all-files",
 		"pre-commit:update": "pre-commit-update"
