--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@tiagojacinto/prettier-config": "0.1.1",
 		"@tiagojacinto/typescript-config": "0.1.1",
 		"@types/node": "^22.16.4",
+		"dprint": "0.50.1",
 		"eslint": "^9.31.0",
 		"is-ci": "^4.1.0",
 		"jest-cucumber": "^4.5.0",
@@ -28,6 +29,7 @@
 		"types:check": "turbo run types:check",
 		"format:check": "biome format . \"**/*.{ts,tsx,md}\"",
 		"format:fix": "biome format --fix \"**/*.{ts,tsx,md}\"",
+		"format:fix:dprint": "dprint fmt",
 		"lint:check": "turbo run lint:check",
 		"lint:fix": "turbo run lint:fix",
 		"lint:fix:eslint": "turbo run lint:fix:eslint",
