--- a/tsconfig.config.json
+++ b/tsconfig.config.json
@@ -1,10 +1,8 @@
 {
-  "extends": "@tiagojacinto/typescript-config/typecheck-config.json",
-  "compilerOptions": {
-    "checkJs": true,
-    "moduleResolution": "bundler",
-  },
-  "include": [
-    "*.config.*js",
-  ]
+	"extends": "@tiagojacinto/typescript-config/typecheck-config.json",
+	"compilerOptions": {
+		"checkJs": true,
+		"moduleResolution": "bundler"
+	},
+	"include": ["*.config.*js"]
 }
