--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 	"devDependencies": {
 		"@biomejs/biome": "2.1.2",
 		"@primitivestack/core": "0.0.16",
-		"@tiagojacinto/eslint-config": "0.5.16",
+		"@tiagojacinto/eslint-config": "0.5.21",
 		"@tiagojacinto/prettier-config": "0.1.1",
 		"@tiagojacinto/typescript-config": "0.1.1",
+		"@trunkio/launcher": "1.3.4",
 		"@types/node": "^22.16.4",
 		"dprint": "0.50.1",
 		"eslint": "^9.31.0",
+		"eslint-config-biome": "1.9.4",
 		"is-ci": "^4.1.0",
 		"jest-cucumber": "^4.5.0",
 		"rimraf": "^6.0.1",
@@ -26,15 +28,16 @@
 	"scripts": {
 		"build": "turbo run build",
 		"dev": "turbo run dev",
+		"trunk": "trunk",
 		"types:check": "turbo run types:check",
-
 		"format:check": "turbo run format:check",
 		"format:fix": "turbo run format:fix",
 		"format:fix:dprint": "dprint fmt",
-
+		"format:fix:trunk": "trunk fmt",
 		"lint:check": "turbo run lint:check",
 		"lint:fix": "turbo run lint:fix",
 		"lint:fix:eslint": "turbo run lint:fix:eslint",
+		"lint:fix:trunk": "trunk check",
 		"quality:check": "turbo run quality:check",
 		"quality:fix": "turbo run quality:fix",
 		"quality:fix:unsafe": "turbo run quality:fix -- --unsafe",
